SEO correction & support multilang
-Pending: translation for french & italian

--- a/css/addedStyle.css
+++ b/css/addedStyle.css
@@ -71,3 +71,16 @@ h3{
 .intro{
 	height: 100%
 }
+
+.LangBar{
+	left: inherit;
+	background-color: #fff;
+	opacity: 20%
+}
+
+.LangBar.dropdown-menu>li>a{
+}
+
+.navbar-custom a{
+
+}
