Revert "added local ressources"
This reverts commit 9cbef459b15d387f334e50d1e7cad74e9c0a499e.

--- a/css/addedStyle.css
+++ b/css/addedStyle.css
@@ -78,4 +78,12 @@ h3 {
 .LangBar {
     left: inherit;
     background-color: #fff;
+    opacity: 20%
+}
+
+.LangBar.dropdown-menu > li > a {
+}
+
+.navbar-custom a {
+
 }
